[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drashta-types-py"
version = "1.6.2"
description = "Pydantic Types for Drashta Python Services"
authors = [{ name = "Shaunak Perni", email = "shaunakperni@icloud.com" }]
license = { text = "LAFCL-1.0-ALv2" }
dependencies = [
    "pydantic>2.0.0"
]

# If you are using a README.md, you can include it as:
readme = "README.md"  # Specifies the file for long_description (optional)
